全排列，回溯算法，模板使用Deque队列作为泛型